@@ -296,6 +296,14 @@ it's behavior should mimic L<URI/rel>'s.
   my $uri = uri('http://example.com/foo/bar/')->relative('http://example.com/foo');
   $uri->to_string; # "foo/bar/"
 
+=head2 normalize
+
+Similar to L<URI/canonical>, performs a minimal normalization on the URI. Only
+generic normalization described in the rfc is performed; no scheme-specific
+normalization is done. Specifically, the scheme and host members are converted
+to lower case and any percent-encoded characters in the URI are converted to
+upper case.
+
 =head1 ENCODING
 
 C<URI::Fast> tries to do the right thing in most cases with regard to reserved
