@@ -38,6 +38,7 @@ sub uri_encode { goto \&encode    }
 sub url_encode { goto \&encode    }
 sub uri_decode { goto \&decode    }
 sub url_decode { goto \&decode    }
+sub canonical  { goto \&canonical }
 
 # Build a simple accessor for basic attributes
 foreach my $attr (qw(scheme usr pwd host port frag)) {
@@ -252,6 +253,12 @@ sub relative {
   $rel->clear_auth;
 
   return $rel;
+}
+
+sub normalize {
+  my $self = shift;
+  $self->normalize_uri;
+  $self;
 }
 
 =encoding UTF8
@@ -541,6 +548,14 @@ it's behavior should mimic L<URI/rel>'s.
 
   my $uri = uri('http://example.com/foo/bar/')->relative('http://example.com/foo');
   $uri->to_string; # "foo/bar/"
+
+=head2 normalize
+
+Similar to L<URI/canonical>, performs a minimal normalization on the URI. Only
+generic normalization described in the rfc is performed; no scheme-specific
+normalization is done. Specifically, the scheme and host members are converted
+to lower case and any percent-encoded characters in the URI are converted to
+upper case.
 
 =head1 ENCODING
 
