@@ -1,8 +1,9 @@
 0.41 2018-??-??
 -new method: absolute($base)
 -new method: relative($base)
+-new method: normalize (like URI->canonical)
 -bugfix: small memory leak in to_string when there is no authority section present
--new feature: uri_abs builds an absolute URI from a relative and base URI string
+-bugfix: to_string did not properly encode authority section in some cases
 
 0.40 2018-08-08
 -bugfix: gracefully handle incorrectly encoded query strings with unencoded '=' not following a key
